# haskell-bookkeeping-jp-sample

./: .gitignore  LICENSE  README.md  my-bookkeeping.cabal  stack.yaml
app/: Main.hs
src/: Csv.hs  Expenses.hs  Sales.hs
